Implement accept/decline jam invites
Resolves #5
